--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
+    "recharts": "^2.10.3",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
